tests/out/error/match/branch_wrong_return.in.bt
x := match 1 {
	1 { 'one' }
	2 { x }
	else { false }
}
