tests/out/error/match/branch_wrong_return.out
tests/out/error/match/branch_wrong_return.in.bt:1:5 error: branch returns bool, expected string
